Implement and test split sentence feature

--- a/templates/results.html
+++ b/templates/results.html
@@ -195,7 +195,7 @@
 
           <!--Data to send back-->
           <input id="sent_index" type="hidden" name="sentindex" value="">
-          <input id="split_pos" type="hidden" name="splitpostion" value="">
+          <input id="split_pos" type="hidden" name="splitposition" value="">
           <input id="first_part" type="hidden" name="firstpart" value="">
           <input id="second_part" type="hidden" name="secondpart" value="">
 
