Clarify instructions regarding splitting sentences
No longer need to highlight substring of offending sentence. Just click
where you want to split them.

--- a/templates/results.html
+++ b/templates/results.html
@@ -152,8 +152,8 @@
              to a conventional cycle.[1]</i> (Wikipedia: "Computus")
 
           <p>To fix this, follow the steps below to separate the sentences.
-          Note that you can only divide a sentence into at most three parts.
-          If you need to do more splits, just repeat the process afterward.
+          Note that you can only divide a sentence into at most two parts.
+          If you need to do more splits, just repeat the process.
         </p>
 
           <p>1. Choose the offending sentence from the drop-down list.</p>
@@ -192,8 +192,7 @@
              {% endfor %}
            </select>
 
-           <p>2. Highlight with your cursor a full sentence you wish to
-           separate from the offending sentence.</p>
+           <p>2. Click or point where the sentence should be split.</p>
            <!-- Print sentence in textarea--->
            <div>
            <textarea id='sentencetextarea' name='split_textarea' readonly>Sentence goes here</textarea>
@@ -219,12 +218,6 @@
          <!---DEBUGGING-->
          <p><pre id="saved"></pre></p>
       </form>
-
-
-
-
-
-
 
     {% else %}
       <h1>Nothing to process!</h1>
