Correct spelling of Ursula K. Le Guin's last name in presentation

--- a/templates/results.html
+++ b/templates/results.html
@@ -113,7 +113,7 @@
          <p></p>
 
 
-        <form action="leguinncounter" method="POST">
+        <form action="leguincounter" method="POST">
 
           <!--HTTP is a stateless protocol; need to send this info back, so we
          can redisplay it once the CGI web script is done processing-->
@@ -174,7 +174,7 @@
 
 
          <!-- Index of sentence chosen to merge with next-->
-         <form action="leguinncounter" method="POST">
+         <form action="leguincounter" method="POST">
 
            <!--HTTP is a stateless protocol; need to send this info back, so we
           can redisplay it once the CGI web script is done processing-->
@@ -235,7 +235,7 @@
 
 
 <br>
-<a href="http://localhost:5000/leguinncounter">Return to main page</a>
+<a href="http://localhost:5000/leguincounter">Return to main page</a>
 
 <script type="text/javascript" src="{{ url_for('static', filename='split.js') }}"></script>
 
