--- a/templates/form.html
+++ b/templates/form.html
@@ -18,7 +18,7 @@
      Click 'Count' to see how your sentences measure up!</p>
 
 
-    <form id="lgcform" action="/leguinncounter" method="POST">
+    <form id="lgcform" action="/leguincounter" method="POST">
 
       <div>
 
