--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeGuinn Word-Counter</title>
+    <title>Le Guin Word Counter</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
