Remove inline CSS code that violates Content Security Policy
Replaced with CSS code in stylesheet; had to do as CSP was stopping
highlighting in sentence table.

--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,11 @@ pre{
   font-family: "Helvetica Neue", "Arial", "sans-serif";
 }
 
-pre.highlight{
+.highlight{
   background-color: yellow;
+}
+
+.bold{
   font-weight: 900;
 }
 
