Fix typo and minor aesthetic improvement

--- a/templates/results.html
+++ b/templates/results.html
@@ -35,7 +35,7 @@
                 of a word, creating different word counts between original
                 and parsed texts.
                 -->
-                <pre> ❖ </pre>
+                <pre> ❖</pre>
 
             {% endfor %}
         </p>
@@ -110,7 +110,7 @@
           The program sometimes detects the end of a sentence before it
           should, resulting in two fragments. Often this happens when the
           program encounters an abbreviation it's unfamiliar with or a
-          dialoge attribution it doesn't know how to handle.
+          dialogue attribution it doesn't know how to handle.
           <p>
           To join the two fragments to form a full sentence, pick the first
           one in the pair and click 'Merge'.
