Tell user about problems relating to abbreviations and footnotes

--- a/templates/form.html
+++ b/templates/form.html
@@ -11,7 +11,13 @@
 
   <p>Your text should be {{max}} words or less; {{char_max}} characters
      or less. I designed the program to parse texts written in English, but
-     you're free to try texts written in other languages. </p>
+     you're free to try texts written in other languages for kicks. </p>
+
+  <p>Please note that abbreviations ending with a period sometimes cause
+     false positives when detecting sentences. Conversely, citation numbers or
+     symbols at the end of sentences may result in the last being ignored.
+     If any of this happens, just use the tools on the Results page to split or
+     merge the text accordingly.</p>
 
    <p>In the boxes below, write or paste a short text
      and set the maximum number of words that should appear in each sentence.
