--- a/templates/results.html
+++ b/templates/results.html
@@ -84,7 +84,7 @@
 
 
         {% if wordcounts['original'] != wordcounts['parsed'] %}
-          <p><b>Warning:</b><br> The word counts of your original and parsed
+          <p><b class='warning'>Warning:</b><br> The word counts of your original and parsed
           texts are different ({{wordcounts['original']}} vs.
           {{wordcounts['parsed']}} words, respectively).
           It's likely that the last part of the original
