--- a/templates/results.html
+++ b/templates/results.html
@@ -121,14 +121,14 @@
 
           <!--HTTP is a stateless protocol; need to send this info back, so we
          can redisplay it once the CGI web script is done processing-->
-          <input type='hidden' name="max" value="{{max}}"></input>
-          <input type='hidden' name="input_text" value="{{input_text}}"></input>
+          <input type='hidden' name="max" value="{{max}}"/>
+          <input type='hidden' name="input_text" value="{{input_text}}"/>
 
           <!-- Need to resend the sentence list in case sentences have been
            previously merged: parsing the original text will bring us back give
           us sentences before they were merged.-->
           {% for i in range(sentences|length) %}
-            <input type='hidden' name="sent_list[]" value="{{sentences[i]['content']}}"</input>
+            <input type='hidden' name="sent_list[]" value="{{sentences[i]['content']}}"/>
           {% endfor %}
 
 
@@ -144,7 +144,7 @@
 
           <div>
               <br>
-            <input name="submit_button" type="Submit" value="Merge"></input>
+            <input name="submit_button" type="Submit" value="Merge"/>
           </div>
 
         </form>
@@ -181,14 +181,14 @@
 
            <!--HTTP is a stateless protocol; need to send this info back, so we
           can redisplay it once the CGI web script is done processing-->
-           <input type='hidden' name="max" value="{{max}}"></input>
-           <input type='hidden' name="input_text" value="{{input_text}}"></input>
+           <input type='hidden' name="max" value="{{max}}"/>
+           <input type='hidden' name="input_text" value="{{input_text}}"/>
 
            <!-- Need to resend the sentence list in case sentences have been
             previously merged: parsing the original text will bring us back give
            us sentences before they were merged.-->
            {% for i in range(sentences|length) %}
-             <input type='hidden' name="sent_list[]" value="{{sentences[i]['content']}}"</input>
+             <input type='hidden' name="sent_list[]" value="{{sentences[i]['content']}}"/>
            {% endfor %}
 
            <select id ="sel_split" name="index">
@@ -217,12 +217,12 @@
           </p>
 
           <!--Data to send back-->
-          <input id="sent_index" type="hidden" name="sentindex" value="">
-          <input id="split_pos" type="hidden" name="splitposition" value="">
-          <input id="first_part" type="hidden" name="firstpart" value="">
-          <input id="second_part" type="hidden" name="secondpart" value="">
+          <input id="sent_index" type="hidden" name="sentindex" value=""/>
+          <input id="split_pos" type="hidden" name="splitposition" value=""/>
+          <input id="first_part" type="hidden" name="firstpart" value=""/>
+          <input id="second_part" type="hidden" name="secondpart" value=""/>
 
-         <input name="submit_button" type="Submit" id='split' value="Split" disabled></input>
+         <input name="submit_button" type="Submit" id='split' value="Split" disabled/>
 
          <!---DEBUGGING-->
          <p><pre id="saved"></pre></p>
@@ -240,6 +240,6 @@
 <br>
 <a href="http://localhost:5000/leguincounter">Return to main page</a>
 
-<script type="text/javascript" src="{{ url_for('static', filename='split.js') }}"></script>
+<script src="{{ url_for('static', filename='split.js') }}"></script>
 
 {% endblock %}
