Inform users site may not work on old browsers

--- a/static/style.css
+++ b/static/style.css
@@ -90,6 +90,10 @@ tr{
   margin-top: 1.5em;
 }
 
+#note{
+  margin-top: 2em;
+}
+
 /*****************************Results.html************************************/
 
 #sent-table{
