--- a/templates/form.html
+++ b/templates/form.html
@@ -80,6 +80,14 @@
       <button id='reset_button' type="button" value="Reset">Reset</button>
     </div>
 
+    <p id="note">
+      <i>
+        N.B. This site may not work on browsers that have not been updated
+        since June 2017. See W3C's table "Browser Support for ES6" for more
+        <a href='https://www.w3schools.com/js/js_versions.asp'>details</a>.
+      </i>
+    </p>
+
   </form>
 
   <!--To display exceptions-->
