Tell dev that certain fix for page width won't work
Both the original and parsed texts are not respecting the 90% width
restriction used through out rest of web app. That's because they're
locked in inline elements. However, the fix to make the inline element
inline-block causes unwanted spacing in the parsed text.

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,9 @@ h1{
 }
 
 pre{
+  /* Do not set display to inline-block: it will cause unwanted spacing in
+     parsed text.
+  */
   display: inline;
   white-space: pre-wrap;
   font-family: "Helvetica Neue", "Arial", "sans-serif";
