--- a/templates/error.html
+++ b/templates/error.html
@@ -1,14 +1,20 @@
 {% extends "layout.html" %}
 
+<!-- Page where to display server-side execptions -->
 
 {% block content %}
 
   <h1>Error</h1>
+
   <pre class="error"> {{err}} </pre>
+
   <h2> Stack Trace </h2>
+
   <pre class="error"> {{stack_trace}} </pre>
+
   <br>
   <br>
+
   <a href="http://localhost:5000/leguinncounter">Return to main page</a>
 
 {% endblock %}
