--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Guin Word Counter</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<!-- Master template from which other templates are built from -->
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Le Guin Word Counter</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
-{% block content %}
-
-<!--Content from input files will go here -->
-
-{% endblock %}
-
+  {% block content %}
+  <!-- Content from input templates will go here -->
+  {% endblock %}
 </body>
 
 </html>
